--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.button {
+  position: absolute;
+  bottom: 2px;
+  left: 65%;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
